--- a/weave_query/requirements.legacy.txt
+++ b/weave_query/requirements.legacy.txt
@@ -22,7 +22,7 @@ aiohttp>=3.8.3
 aiofiles>=22.1.0
 aioprocessing>=2.0.1
 Werkzeug>=3.0.3  # CVE 2024-34069
-janus>=1.0.0
+janus==1.0.0 # 1.2.0 breaks ThreadQueue unit tests and possibly ThreadQueue
 
 # we use this for logger, could probably skip it
 python-json-logger>=2.0.4
