--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,16 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+llm_providers = [
+  "weave[anthropic]",
+  "weave[cohere]",
+  "weave[google_ai_studio]",
+  "weave[groq]",
+  "weave[mistral1]",
+  "weave[openai]",
+  "weave[vertexai]",
+  "weave[langchain]",
+]
 docs = ["playwright", "lazydocs", "nbformat", "nbconvert"]
 anthropic = ["anthropic>=0.18.0"]
 cerebras = ["cerebras-cloud-sdk"]
@@ -75,14 +85,7 @@ llamaindex = ["llama-index>=0.10.35"]
 mistral0 = ["mistralai>=0.1.8,<1.0.0"]
 mistral1 = ["mistralai>=1.0.0"]
 scorers = ["Levenshtein>=0.26.0", "instructor>=1.5.2"]
-scorers_tests = [
-  "instructor>=1.5.2",
-  "Levenshtein>=0.26.0",
-  "openai>=1.0.0",
-  "google-generativeai>=0.8.0",
-  "mistralai>=1.0.3",
-  "anthropic>=0.30.0",
-]
+scorers_tests = ["weave[scorers]", "weave[llm_providers]"]
 notdiamond = ["notdiamond>=0.3.21", "litellm<=1.49.1"]
 openai = ["openai>=1.0.0"]
 pandas-test = ["pandas>=2.2.3"]
