--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -218,7 +218,7 @@ jobs:
   trace-tests:
     name: Trace nox tests
     timeout-minutes: 10
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         python-version-major: ["3"]
