--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -218,7 +218,7 @@ jobs:
   trace-tests:
     name: Trace nox tests
     timeout-minutes: 10
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version-major: ["3"]
@@ -282,6 +282,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Enable debug logging
         run: echo "ACTIONS_STEP_DEBUG=true" >> $GITHUB_ENV
+      - name: Install SQLite dev package
+        run: sudo apt update && sudo apt install -y libsqlite3-dev
       - name: Set up Python ${{ matrix.python-version-major }}.${{ matrix.python-version-minor }}
         uses: actions/setup-python@v5
         with:
