--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ authors = [
   { name = "Griffin Tarpenning", email = "griffin.tarpenning@wandb.com" },
   { name = "Josiah Lee", email = "josiah.lee@wandb.com" },
   { name = "Andrew Truong", email = "andrew@wandb.com" },
+  { name = "Niall McQuay", email = "niall.mcquay@wandb.com" },
 ]
 classifiers = [
   "Development Status :: 4 - Beta",
@@ -36,14 +37,16 @@ dynamic = ["version"]
 dependencies = [
   "pydantic>=2.0.0",
   "wandb>=0.17.1",
-  "packaging>=21.0",         # For version parsing in integrations
-  "tenacity>=8.3.0,!=8.4.0", # Excluding 8.4.0 because it had a bug on import of AsyncRetrying
-  "emoji>=2.12.1",           # For emoji shortcode support in Feedback
-  "uuid-utils>=0.9.0",       # Used for ID generation - remove once python's built-in uuid supports UUIDv7
-  "numpy>1.21.0",            # Used in box.py and scorer.py (should be made optional)
-  "rich",                    # Used for special formatting of tables (should be made optional)
-  "gql[aiohttp,requests]",   # Used exclusively in wandb_api.py
-  "jsonschema>=4.23.0",      # Used by scorers for field validation
+  "packaging>=21.0",              # For version parsing in integrations
+  "tenacity>=8.3.0,!=8.4.0",      # Excluding 8.4.0 because it had a bug on import of AsyncRetrying
+  "emoji>=2.12.1",                # For emoji shortcode support in Feedback
+  "uuid-utils>=0.9.0",            # Used for ID generation - remove once python's built-in uuid supports UUIDv7
+  "numpy>1.21.0",                 # Used in box.py and scorer.py (should be made optional)
+  "rich",                         # Used for special formatting of tables (should be made optional)
+  "gql[aiohttp,requests]",        # Used exclusively in wandb_api.py
+  "jsonschema>=4.23.0",           # Used by scorers for field validation
+  "presidio-analyzer==2.2.357",   # Used for PII redaction
+  "presidio-anonymizer==2.2.357", # Used for PII redaction
 ]
 
 [project.optional-dependencies]
