--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -240,6 +240,7 @@ jobs:
             "dspy",
             "groq",
             "google_ai_studio",
+            "guardrails",
             "instructor",
             "langchain",
             "litellm",
