--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,6 +82,13 @@ scorers_tests = [
   "google-generativeai>=0.8.0",
   "mistralai>=1.0.3",
   "anthropic>=0.30.0",
+  "sentence-transformers>=3.3.1",
+  "scikit-learn>=1.5.2",
+  "transformers>=4.35.0",
+  "accelerate>=1.0.0",
+  "torch>=2.2.0",
+  "sacrebleu>=2.4.2",
+  "rouge>=1.0.1",
 ]
 notdiamond = ["notdiamond>=0.3.21", "litellm<=1.49.1"]
 openai = ["openai>=1.0.0"]
