--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,7 +96,7 @@ test = [
   "pytest-xdist>=3.1.0",
   "pytest-rerunfailures>=12.0",
   "pytest-rerunfailures>=14.0",
-  "clickhouse_connect==0.7.0",
+  "clickhouse-connect==0.8.14",
   "fastapi>=0.110.0",
   "sqlparse==0.5.0",
 
