feat(weave): Bedrock support (#3145)
* minimal code

* add shard, fix test

* merge

* add clean cassetter

* lint

* pseudo working stream

* add a test (beware api keys may leak)

* remove stuff

* add bedrock

* update bedrock tests

* mock aws

* missing region

* lint

* invoke test

* add docs

* strip meta

* resolve ref for model_name

* complete docs

* lint

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -235,6 +235,7 @@ jobs:
             "trace",
             "trace_server",
             "anthropic",
+            "bedrock",
             "cerebras",
             "cohere",
             "dspy",
